<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/splash"
    tools:context=".ui.SignupActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="350dp"
            android:layout_height="370dp"
            android:padding="20dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/round">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/name"
                android:textColor="@color/grey"
                android:textSize="8pt"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:textColorHint="@color/blue"
                android:hint="DigitalHouse Brasil"
                android:textColor="@color/blue"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/email"
                android:textColor="@color/grey"
                android:textSize="8pt"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:textColorHint="@color/blue"
                android:hint="dh@digitalhouse.com"
                android:textColor="@color/blue"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/password"
                android:textColor="@color/grey"
                android:textSize="8pt"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:hint="********"
                android:textColorHint="@color/blue"
                android:textColor="@color/blue"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/repeatpassword"
                android:textColor="@color/grey"
                android:textSize="8pt"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:hint="********"
                android:textColorHint="@color/blue"
                android:textColor="@color/blue"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/createaccbt"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@color/red"/>

        </LinearLayout>
    </FrameLayout>

</ScrollView>